Updated sizing properties of the contact form and the right-hand header conten. This will test the jumping issue when a user clicks on the contact form.

--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ body {
 
 #contact {
   background-color: #0f1314;
-  height: 110vh;
+  height: 800px;
 }
 
 #contact h1 {
@@ -384,6 +384,6 @@ h1.title span {
   }
 
   .header-content-right {
-    width: 100%;
+    width: 380px;
   }
 }
